# OpenMEASURE

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  PCA_digits_exercise.ipynb  README.md  pyproject.toml  setup.py
OpenMEASURE/: sparse_sensing.py
data/ROM/: X_2D_test.npy  X_2D_train.npy  mesh_outline.csv  parameters_test.csv  parameters_train.csv  xz.npy
data/flow_cylinder/: X.npy  x_test.npy
docs/: ctc_doc.ipynb  gpr_doc.ipynb  pyvista_doc.ipynb  sparse_sensing_doc.ipynb
examples/: flow_cylinder.py
src/: cokriging.py  gpr.py  sparse_sensing.py
src/openmeasure/: gpr.py  sparse_sensing.py  utils.py
tests/: test_gpr.py  test_gpr_data.py  test_rom.py  test_sparse_sensing.py  test_spr.py  test_spr_data.py
